Added all important things to angular app

--- a/frontend/src/app/password-edit/password-edit.component.html
+++ b/frontend/src/app/password-edit/password-edit.component.html
@@ -31,7 +31,7 @@
                 <button class="show-btn" type="button" id="togglePasswordVisibilityButton" (click)="togglePasswordVisibility()"><i id="togglePasswordVisibilityIcon" class="fas fa-eye"></i></button>
 
                 <!-- Save password button -->
-                <button class="save-btn">Save Password</button>
+                <button (click)="save()" class="save-btn">Save Password</button>
             </div>
         </div>
     </div>
