--- a/frontend/src/app/password-manager/password-manager.component.html
+++ b/frontend/src/app/password-manager/password-manager.component.html
@@ -37,7 +37,7 @@
                 <td>
                     <button 
                         class="delete-btn"
-                        >
+                        (click)="deletePassword(password)">
                         Delete
                     </button>
                     <!-- Delete button with click event to delete the password -->
